# msg_load_folder

./: .gitignore  Cargo.toml  README.md
assets/spells/: _disabled_spell.spell.ron  fireball.spell.ron  heal.spell.ron  ice_shard.spell.ron  lightning_bolt.spell.ron
examples/: basic.rs  basic_loading.rs  ron.rs
src/: lib.rs
