[package]
name = "msg_load_folder"
version = "0.1.0"
edition = "2024"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Generic folder-based asset loading infrastructure for Bevy games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_load_folder"
keywords = ["bevy", "gamedev", "assets", "loading", "ecs"]
categories = ["game-development", "filesystem"]
readme = "README.md"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_image",
    "bevy_sprite",
    "bevy_ui",
] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_log",
    "bevy_state",
    "std",
    "x11",
    "bevy_render",
    "bevy_image",
    "bevy_window",
    "file_watcher",
    "multi_threaded",
] }

[[example]]
name = "basic_loading"
path = "examples/basic_loading.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(bevy_lint)",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
