[package]
name = "msg_load_folder"
version = "0.3.0"
edition = "2024"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Generic folder-based asset loading infrastructure for Bevy games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_load_folder"
keywords = ["bevy", "gamedev", "assets", "loading", "ecs"]
categories = ["game-development", "filesystem"]
readme = "README.md"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_image",
    "bevy_sprite",
    "bevy_ui",
] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
    "std",
    "multi_threaded",
] }
bevy_common_assets = { version = "0.15.0", features = ["ron"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(bevy_lint)",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
